--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        jcenter()
+        jcenter{
+            url "http://jcenter.bintray.com/"
+        }
         google()
+        mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
+        maven { url "https://maven.google.com"}
+        maven { url "http://repol.maven.org/maven2" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        jcenter{
+            url "http://jcenter.bintray.com/"
+        }
         google()
+        mavenCentral()
+        maven { url "https://jitpack.io"}
+        maven { url "https://maven.google.com"}
+        maven { url "http://repol.maven.org/maven2" }
     }
 }
