fix bugs and modify song list from net

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
         <activity android:name=".activity.SettingActivity"/>
         <activity android:name=".activity.AboutActivity"/>
         <activity android:name=".activity.SongListActivity"/>
+        <activity android:name=".activity.SearchResultActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing|stateAlwaysHidden"
+            />
 
         <service android:name=".service.PlayService" />
 
