--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
 
     <permission android:name="org.loader.litepalayer.playpermission" />
 
+    <!--X5所用权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name=".application.App"
         android:allowBackup="true"
@@ -47,6 +54,9 @@
         <activity android:name=".activity.SearchResultActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing|stateAlwaysHidden"
+            />
+        <activity android:name=".activity.WebViewActivity"
+
             />
 
         <service android:name=".service.PlayService" />
