--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,9 @@ dependencies {
     compile 'com.zhy:okhttputils:2.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+
+    dependencies {
+        compile 'com.github.hotchemi:permissionsdispatcher:3.1.0'
+        annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
+    }
 }
