--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ buildscript {
         }
         maven { url "https://maven.google.com"}
         maven { url "http://repol.maven.org/maven2" }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.1'
     }
 }
 
